[package]
name = "rainbow"
version = "0.1.0"
edition = "2021"
authors = ["vlk"]
description = "A script that loops through all 24-bit colors with as little latency as possible"
repository = "https://github.com/REALERvolker1/rainbow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
